EmployeeDemo/force-app/main/default/objects/Employee__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <label>Date_of_Birth</label>
    <type>Date</type>
</CustomField>