EmployeeDemo/force-app/main/default/objects/Employee__c/fields/FullName__c.field-meta.xml
<CustomField>
    <fullName>FullName__c</fullName>
    <formula>FirstName__c  &amp;  LastName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FullName</label>
    <type>Text</type>
</CustomField>