EmployeeDemo/force-app/main/default/objects/Employee__c/fields/No__c.field-meta.xml
<CustomField>
    <fullName>No__c</fullName>
    <label>No</label>
    <type>AutoNumber</type>
</CustomField>