EmployeeDemo/force-app/main/default/objects/Employee__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>Leader</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>